tests/samples/invalid/ambiguous_identity_casting.pn
fn main() -> i32
{
	var x = 0;
	var y = x as i32;
	x = 0u64;
	return: 200 + y
}
